# second_project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 7f4d2fe219f6_init.py  a7b132a5e666_new_test.py  a8a0a08c0afc_new_test.py  aef1c5f1eb9b_init.py  bd78aed20ea0_init.py
redis/: redis.conf
src/: initial_seed.py
src/app/: main.py
src/app/api/: endpoints.py  middleware.py  schemas.py
src/app/api/dependencies/: cache.py  repository.py  session.py  user.py
src/app/api/routers/: parcels.py
src/app/core/: config.py  database.py  logging.py  logging_config.py  mixin.py  paths.py  rabbitmq.py  worker.py
src/app/core/config/: __init__.py  api.py  base.py  db.py  rabbitmq.py  redis.py
src/app/db/: crud.py  database.py  models.py
src/app/models/: base.py  parcel.py  user.py
src/app/repository/crud/: base.py  parcel.py  user.py
src/app/schemas/: schemas.py
src/app/services/: currency.py  delivery.py  session.py
src/app/tasks/: celery_app.py
src/app/utils/: cache.py
src/app/worker/: consumer.py
src/tests/: test_endpoints.py
