[project]
name = "second-project"
version = "0.1.0"
description = "Delivery service"
authors = [
    {name = "ka1b3rt",email = "katbert13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
