[project]
name = "second-project"
version = "0.1.0"
description = "Delivery service"
authors = [
    {name = "ka1b3rt",email = "katbert13@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "celery[redis] (>=5.5.0,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

